[gd_scene load_steps=2 format=2]

[ext_resource path="res://objects/WordEdit.gd" type="Script" id=1]

[node name="WordEdit" type="VBoxContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -44.0
grow_vertical = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Word" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Word"]
margin_top = 5.0
margin_right = 33.0
margin_bottom = 19.0
text = "Scale"

[node name="ScaleSlider" type="HSlider" parent="Word"]
margin_left = 37.0
margin_right = 946.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 0.1
max_value = 3.0
step = 0.01
value = 1.0

[node name="ScaleInput" type="SpinBox" parent="Word"]
margin_left = 950.0
margin_right = 1024.0
margin_bottom = 24.0
rect_min_size = Vector2( 32, 0 )
size_flags_horizontal = 5
min_value = 0.1
max_value = 3.0
step = 0.01
value = 1.0
allow_greater = true
allow_lesser = true
align = 2

[node name="Character" type="HBoxContainer" parent="."]
visible = false
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="Character"]
margin_top = 1.0
margin_right = 15.0
margin_bottom = 15.0
text = "ch"

[node name="RotationSlider" type="HSlider" parent="Character"]
margin_left = 19.0
margin_right = 1024.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 360.0
step = 0.01
